--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,13 @@
 </head>
 <body>
       <div class="inputs-body">
-        <h2>Decoding World War II Messages</h2>
+        <h2 class="first">Decoding World War II Messages</h2>
+        <div class="h2">
+          <h2>Decoding </h2>
+          <h2>World War II </h2>
+          <h2>Messages</h2>
+          
+        </div>
         <div class="inputss">
           <label class="input1" for="encrypted-messages">Encrypted Messages: </label>
           <input 
@@ -35,7 +41,7 @@
         <br>
         <div class="buttons">
           <button class="btn-D">Decode Messages</button>
-          <button class="btn-R" onclick="reset()">Clear Messages</button><br><br>
+          <button class="btn-R" onclick="reset()">Clear Messages</button><br>
           <!-- <span id="decoded-messages" class="decoded-messages"> Your Decoded Message </span> -->
         </div>
         <span id="decoded-messages" class="decoded-messages"> Your Decoded Message </span>
